# c-console-program-DP-Prototype

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Client.h  Pant1.cpp  Pant1.h  Pant2.cpp  Pant2.h  PrototypeFactory.h  PrototypePant.cpp  PrototypePant.h  main.cpp
tst/: CMakeLists.txt
